--- a/client/players/main.css
+++ b/client/players/main.css
@@ -5,9 +5,25 @@
 
 /* Blocks */
 .player_form {
+  margin: 15px 0 0;
+}
+
+.player_form__title {
+  text-align: center;
+  font-weight: 300;
+  margin: 5px;
+}
+
+.player_form__description {
+  font-size: 15px;
+  font-weight: 100;
+  text-align: center;
+  color: #555;
+}
+
+.player_form__input_wrapper {
   display: flex;
   justify-content: center;
-  margin: 15px 0 0;
 }
 
 .player_form__input {
@@ -15,6 +31,22 @@
   font-family: 'Oswald', sans-serif;
   padding: 5px;
   border: 1px solid #777;
+  display: block;
+}
+
+.player_form__hint {
+  text-align: center;
+  margin: 3px 0 0 0;
+  font-size: 12px;
+  font-weight: 100;
+  user-select: none;
+
+  span {
+    color: #3c8298;
+    display: inline-block;
+    border-bottom: 1px dashed #3c8298;
+    cursor: pointer;
+  }
 }
 
 .player_form__submit {
@@ -27,6 +59,7 @@
 .players {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   list-style: none;
   padding: 0;
   cursor: default;
@@ -56,8 +89,8 @@
   line-height: 26px;
   padding: 0 20px 0 5px;
   position: relative;
-  margin: 0 10px 0;
-  text-decoration: none;
+  margin: 0 10px 5px 0;
+  white-space: nowrap;
   animation: playersInit 0.6s ease;
 }
 
@@ -84,5 +117,14 @@
 @media screen and (max-width: 462px) {
   .player_form__input {
     width: 70%;
+  }
+
+  .player_form__description {
+    font-size: 12px;
+  }
+
+  .player_form__title {
+    font-size: 14px;
+    margin: 0 0 5px;
   }
 }
